fix map z-index

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -131,5 +131,6 @@ body {}
 
 .map {
   position: absolute; top: 0; right: 0; bottom: 4px; left: 0;
+  z-index: 1;
 }
 
